# segmentation-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
notebook/training/: test_segmentation_models.ipynb  train.py
notebook/training/dataset_creation/: split_files.py
onnx/: convert_to_onnx.py
scripts/: models.json  predict.py  run_analysis.py  run_border_analysis.py  run_inference.py  split_dataset.py  test.py  train.py  utils.py
src/datamodule/: segmentation.py
src/dataset/: segmentation.py
src/segmentation/data/: datamodule.py
src/segmentation/models/: unet.py
src/segmentation/utils/: dataset_utils.py  utils.py
