[tool.poetry]
name = "segmentation-pytorch"
version = "0.1.0"
description = "PyTorch segmentation project"
authors = ["Andrea Tiberti"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.2.3,<3.0.0"
segmentation-models-pytorch = ">=0.4.0,<0.5.0"
lightning = ">=2.5.0.post0,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
albumentations = "==2.0.6"
scikit-learn = ">=1.6.1,<2.0.0"
ultralytics = ">=8.3.94,<9.0.0"
neptune = ">=1.13.0,<2.0.0"
comet-ml = ">=3.49.5,<4.0.0"
notebook = ">=7.4.0,<8.0.0"
torch = {version = ">=2.6.0,<3.0.0", source = "pytorch-gpu"}
torchvision = {version = ">=0.21.0,<0.22.0", source = "pytorch-gpu"}
torchaudio = {version = ">=2.6.0,<3.0.0", source = "pytorch-gpu"}
line-profiler-pycharm = ">=1.2.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
